--- a/package.json
+++ b/package.json
@@ -10,13 +10,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "compression": "^1.7.4",
     "connect-timeout": "^1.9.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "helmet": "^7.0.0",
+    "joi": "^17.11.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^7.5.2",
     "morgan": "^1.10.0",
-    "winston": "^3.10.0",
-    "mongoose": "^7.5.2"
+    "multer": "^1.4.5-lts.1",
+    "winston": "^3.10.0"
   }
 }
