--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
-    "axios": "^1.6.3",
+    "@mozilla/readability": "^0.5.0",
+    "axios": "^1.6.8",
     "bcryptjs": "^2.4.3",
+    "cheerio": "^1.0.0-rc.12",
     "cloudinary": "^2.0.1",
     "compression": "^1.7.4",
     "connect-timeout": "^1.9.0",
@@ -22,11 +24,15 @@
     "fluent-ffmpeg": "^2.1.2",
     "helmet": "^7.0.0",
     "joi": "^17.11.0",
+    "jsdom": "^24.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "request": "^2.88.2",
+    "rss-parser": "^3.13.0",
+    "set-cookie-parser": "^2.6.0",
+    "user-agents": "^1.1.170",
     "winston": "^3.10.0"
   }
 }
