--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/server.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon src/server.js"
+    "dev": "node src/server.js"
   },
   "author": "",
   "license": "ISC",
@@ -24,14 +24,18 @@
     "fluent-ffmpeg": "^2.1.2",
     "helmet": "^7.0.0",
     "joi": "^17.11.0",
-    "jsdom": "^24.0.0",
+    "jsdom": "^24.1.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "nodemon": "^3.1.9",
+    "puppeteer": "^24.4.0",
     "request": "^2.88.2",
     "rss-parser": "^3.13.0",
     "set-cookie-parser": "^2.6.0",
+    "simple-oauth2": "^5.1.0",
+    "twitter-api-v2": "^1.20.2",
     "user-agents": "^1.1.170",
     "winston": "^3.10.0"
   }
